config/prd-nodejs-tutorials/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-tutorialspoint
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nodejs-tutorialspoint
  template:
    metadata:
      labels:
        app: nodejs-tutorialspoint
    spec:
      containers:
        - name: nodejs-tutorialspoint
          image: "997305327977.dkr.ecr.ap-southeast-1.amazonaws.com/nodejs-tutorials:latest"
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /live
              port: http
          readinessProbe:
            httpGet:
              path: /ready
              port: http
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
