config/prd-nodejs-tutorials/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-tutorialspoint
  labels:
    app: nodejs-tutorialspoint
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: prod.km.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-tutorialspoint
                port:
                  number: 80
